add readme, changed: script.js, style.css, index.html

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .container{
     border: 1px solid #black;
     width: 95%;
-    height: 100vh;
     display: flex;
+    text-align: center;
 }
 
 .quotes{
